add custom errorHandler, update openapi.yml schema and add tests for GetExercises
