# backend/api/internal/openapi/oas_handlers_gen.go
@@ -80,6 +80,14 @@ func (s *Server) handleGetExercisesRequest(args [0]string, argsEscaped bool, w h
 					Name: "equipmentTypes",
 					In:   "query",
 				}: params.EquipmentTypes,
+				{
+					Name: "primaryMuscles",
+					In:   "query",
+				}: params.PrimaryMuscles,
+				{
+					Name: "tags",
+					In:   "query",
+				}: params.Tags,
 			},
 			Raw: r,
 		}
